    functions). (Pierre)
  . Fixed bug #60825 (Segfault when running symfony 2 tests).
    (Dmitry, Laruence)
  . Fixed bug #60801 (strpbrk() mishandles NUL byte). (Adam)
  . Fixed bug #60569 (Nullbyte truncates Exception $message). (Ilia)
  . Fixed bug #60227 (header() cannot detect the multi-line header with CR).
    (rui, Gustavo)
  . Fixed bug #52719 (array_walk_recursive crashes if third param of the
    function is by reference). (Nikita Popov)
  . Fixed bug #51860 (Include fails with toplevel symlink to /). (Dmitry)

- Installation
  . Fixed bug #61172 (Add Apache 2.4 support). (Chris Jones)

- Fileinfo
  . Fixed bug #61173 (Unable to detect error from finfo constructor). (Gustavo)

- Firebird Database extension (ibase):
  . Fixed bug #60802 (ibase_trans() gives segfault when passing params).

- mysqli
  . Fixed bug #61003 (mysql_stat() require a valid connection). (Johannes).

- PDO_mysql
  . Fixed bug #61207 (PDO::nextRowset() after a multi-statement query doesn't
    always work). (Johannes)
  . Fixed bug #61194 (PDO should export compression flag with myslqnd).
    (Johannes)

- PDO_pgsql
  . Fixed bug #61267 (pdo_pgsql's PDO::exec() returns the number of SELECTed
    rows on postgresql >= 9). (ben dot pineau at gmail dot com)

- PDO_Sqlite extension:
  . Add createCollation support. (Damien)

- Phar:
  . Fixed bug #61184 (Phar::webPhar() generates headers with trailing NUL
    bytes). (Nikic)

- PHP-FPM SAPI:
  . Fixed bug #60811 (php-fpm compilation problem). (rasmus)

- Readline:
  . Fixed bug #61088 (Memory leak in readline_callback_handler_install).
    (Nikic, Laruence)

- SOAP
  . Fixed basic HTTP authentication for WSDL sub requests. (Dmitry)
  . Fixed bug #60887 (SoapClient ignores user_agent option and sends no
    User-Agent header). (carloschilazo at gmail dot com)
  . Fixed bug #60842, #51775 (Chunked response parsing error when 
    chunksize length line is > 10 bytes). (Ilia)

- SPL